--- a/Progetto1/MyForm.resx
+++ b/Progetto1/MyForm.resx
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="label1.Text" xml:space="preserve">
-    <value>structuredHeader
+    <value>structuredHeader 3+1
 NID_MESSAGE : 8;
 L_MESSAGE : 11;
 T_TRAIN : 32;
 NID_ENGINE : 24;
 	
-commandData
+201 commandData 3+3+1
 NID_PACKET : 8;
 L_PACKET : 13;
 Q_COMMAND_TYPE : 3;
@@ -132,7 +132,7 @@ M_GOA_LEVEL : 2;
 NID_OPERATIONAL : 32;
 PADDING : 5;
 	
-pkgstatolinea
+1 pkgstatolinea 3+7+k
 NID_PACKET : 8;
 L_PACKET : 13;
 NID_OPERATIONAL : 32;
@@ -141,7 +141,7 @@ Q_STATOCDB : 2;
 Q_DEVIATIOIO : 2;
 N_ITER : 5;	
 	
-missionAck 
+210 missionAck 4+4
 NID_PACKET : 8;
 L_PACKET : 13;
 T_TRAIN : 32;
@@ -150,12 +150,12 @@ padding : 7;
 </value>
   </data>
   <data name="label2.Text" xml:space="preserve">
-    <value> presentation
+    <value> 215 presentation 4+3
 NID_PACKET : 8;
 L_PACKET : 13;
 M_PORT : 32;
 	
-missionData
+200 missionData 3+6+k1+6+k2
 NID_PACKET : 8;
 L_PACKET : 13;
 Q_SCALE : 2;
